validation/html/css/main.css
@charset "utf-8";
/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

html {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images, videos, audio and canvas and the bottom of
 * their containers: h5bp.com/i/440
 */

audio,
canvas,
img,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browse Happy prompt
   ========================================================================== */

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

@-moz-keyframes rotateRight{
    0%{ -moz-transform:rotate(0deg); -moz-transform-origin:50% 50%; }
    100%{ -moz-transform:rotate(360deg); }
}

@-webkit-keyframes rotateRight{
    0%{ -webkit-transform:rotate(0deg); -webkit-transform-origin:50% 50%; }
    100%{ -webkit-transform:rotate(360deg); }
}

#content
{
    background:#FFF;
    border:1px solid gray;
    border-radius:4px;
    box-sizing:border-box;
    float:left;
    margin-bottom:20px;
    margin-left:220px;
    padding:10px 20px;
    width:722px;
}

#content .object_wrap:last-child
{
    border:0;
}

#content table
{
    border:1px solid #bdc3c7;
    width:100%;
}

#loglist
{
    background:#FFF;
    border:1px solid gray;
    border-bottom-left-radius:4px;
    border-bottom-right-radius:4px;
    border-top-left-radius:4px;
    border-top-right-radius:4px;
    box-sizing:border-box;
    display:none;
    position:fixed;
    width:300px;
    z-index:5000;
}

#loglist_content
{
    font-size:12px;
    height:500px;
    overflow:auto;
    padding:10px 30px 10px 10px;
}

#loglist_handle
{
    background:#bdc3c7;
    border-top-left-radius:4px;
    border-top-right-radius:4px;
    cursor:move;
    font-size:14px;
    font-weight:700;
    padding:3px;
}

#loglist_handle img, #logreader_handle img {
    height: 18px;
}

#logreader
{
    background:#FFF;
    border:1px solid gray;
    border-bottom-left-radius:4px;
    border-bottom-right-radius:4px;
    border-top-left-radius:4px;
    border-top-right-radius:4px;
    box-sizing:border-box;
    display:none;
    padding:0!important;
    position:fixed;
    width:900px;
    z-index:5000;
}

#logreader_content
{
    margin:0;
    max-height:500px;
    overflow:auto;
    padding:10px;
}

#logreader_handle
{
    background:#bdc3c7;
    border-top-left-radius:4px;
    border-top-right-radius:4px;
    cursor:move;
    font-size:14px;
    font-weight:700;
    padding:2px;
}

#menu > div
{
    background:#FFF;
    border:1px solid gray;
    border-bottom:0;
    padding:10px;
    z-index:0;
}

#menu div:first-child
{
    border-top-left-radius:4px;
    border-top-right-radius:4px;
}

#menu div:last-child
{
    border-bottom:1px solid gray;
    border-bottom-left-radius:4px;
    border-bottom-right-radius:4px;
}

#menu img
{
    height:16px;
    width:16px;
}

#navigation
{
    box-sizing:border-box;
    float:left;
    margin-right:20px;
    position:fixed;
    width:200px!important;
}

#outer
{
    background:rgba(0,0,0,0.7);
    color:#FFF!important;
    display:none;
    height:100%;
    left:0;
    position:fixed;
    top:0;
    width:100%;
    z-index:9999;
}

#outer img
{
    -moz-animation:2s rotateRight infinite linear;
    -webkit-animation:2s rotateRight infinite linear;
}

#regenerate
{
    background:#f5f5f5;
    border:1px solid gray!important;
    border-radius:4px!important;
    box-sizing:border-box;
    cursor:pointer;
    margin:5px auto;
    padding:3px;
    text-align:center;
    width:160px!important;
}

#regenerate:hover
{
    background:#e5e5e5;
}

#serverwarning
{
    box-sizing:border-box;
    margin-bottom:20px;
    width:100%;
}

#table-cell
{
    display:table-cell;
    height:100%;
    text-align:center;
    vertical-align:middle;
}

#table-container
{
    display:table;
    height:100%;
    width:100%;
}

#wrap
{
    box-sizing:border-box;
    margin:30px auto;
    width:920px;
}

.alert
{
    background-color:#fcf8e3;
    border:1px solid #fbeed5;
    border-radius:4px;
    color:#c09853;
    padding:10px;
}

.close-serverwarning,.close
{
    cursor:pointer;
    float:right;
}

.lastmodified
{
    font-size:12px;
    margin-top:10px;
    text-align:center;
}

.loglink
{
    cursor:pointer;
}

.menuhead:hover
{
    background:#f5f5f5!important;
    cursor:pointer;
}

.object
{
    margin-bottom:10px;
    order:2;
    width:696px;
}

.object img
{
    border:1px solid #f5f5f5;
    box-sizing:border-box;
    max-width:690px;
}

.object_wrap
{
    border-bottom:1px solid gray;
    display:flex;
    flex-wrap:wrap;
    justify-content:space-between;
    margin-bottom:25px;
    padding-bottom:15px;
    width:100%;
}

.sep
{
    border-bottom:1px solid gray;
    width:100%;
}

.submenu
{
    background:#f5f5f5!important;
    border-top:1px solid gray;
    display:none;
}

.submenu a
{
    border-bottom:1px dashed;
    color:#000;
    text-decoration:none;
}

.wrap_boxes
{
    background:#f5f5f5;
    box-sizing:border-box;
    height:intrinsic;
    margin-bottom:10px;
    order:3;
    padding:10px;
    width:696px;
}

h2
{
    font-size:22px;
    font-weight:#000;
    margin:0;
}

html,body
{
    background:#bdc3c7;
    font-family:Droid Serif, sans-serif;
    font-size:16px;
    font-weight:400;
    line-height:1.428;
}

table
{
    width:100%;
}

td,th
{
    padding:5px;
}

th
{
    background:#bdc3c7;
    text-align:left;
}

tr:nth-child(even) td
{
    background-color:#f5f5f5;
}


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 150%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto; 
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

